<package>
  <name>pr2_ps3_joystick_app</name>
  <version>1.0.2</version>
  <description>Teleop PS3 joystick application for the pr2</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tony Pratkanis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_teleop_general</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_teleop_general</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_teleop_general</test_depend> -->

</package>
